[gd_scene load_steps=19 format=3 uid="uid://bbqtns1bbw28q"]

[ext_resource type="PackedScene" uid="uid://ck777aksqa1dj" path="res://Scenes/character.tscn" id="1_2i77r"]
[ext_resource type="Script" path="res://Scripts/ikea.gd" id="1_hh68q"]
[ext_resource type="PackedScene" uid="uid://bukq4uqbqstc2" path="res://Scenes/toilet.tscn" id="2_2i6gv"]
[ext_resource type="PackedScene" uid="uid://qms5hq5enrjn" path="res://Scenes/lookable.tscn" id="3_m5xf5"]
[ext_resource type="Texture2D" uid="uid://dbc0jrini3cgi" path="res://Assets/Art/keypad.png" id="4_1slqb"]
[ext_resource type="Texture2D" uid="uid://c3oautrj3gopy" path="res://Assets/Art/Sticky Note.png" id="4_isvs1"]
[ext_resource type="Script" path="res://Scenes/Keypad.gd" id="5_ws2qu"]
[ext_resource type="AudioStream" uid="uid://x2l4dvioka8n" path="res://Assets/Sounds/SFX/turn page.wav" id="6_gmdbi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_focxc"]

[sub_resource type="Animation" id="Animation_ovwqw"]
resource_name = "In"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Character/HUD/Sticky Note:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-30, 0), Vector2(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Character/HUD/Sticky Note:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Character/HUD/Sticky Note/Label:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2b3ft"]
resource_name = "Out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Character/HUD/Sticky Note:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(-30, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Character/HUD/Sticky Note:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Character/HUD/Sticky Note/Label:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_cg5uj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Character/HUD/Sticky Note:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-30, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_223dm"]
_data = {
"In": SubResource("Animation_ovwqw"),
"Out": SubResource("Animation_2b3ft"),
"RESET": SubResource("Animation_cg5uj")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6h0a0"]

[sub_resource type="Animation" id="Animation_f8k6i"]
resource_name = "In"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Character/HUD/Keypad:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-30, 0), Vector2(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Character/HUD/Keypad:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Character/HUD/Keypad/Label:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_w4ecy"]
resource_name = "Out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Character/HUD/Keypad:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(-30, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Character/HUD/Keypad:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Character/HUD/Keypad/Label:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_6w0o6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Character/HUD/Keypad:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-30, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rcmpo"]
_data = {
"In": SubResource("Animation_f8k6i"),
"Out": SubResource("Animation_w4ecy"),
"RESET": SubResource("Animation_6w0o6")
}

[node name="Ikea" type="Node2D"]
script = ExtResource("1_hh68q")

[node name="Character" parent="." node_paths=PackedStringArray("toilet") instance=ExtResource("1_2i77r")]
position = Vector2(70, 60)
toilet = NodePath("../Toilet")

[node name="Find the toilet" parent="Character/HUD" index="4"]
visible = false

[node name="Sticky Note" type="TextureRect" parent="Character/HUD" index="5"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -30.0
offset_right = 34.0
offset_bottom = 64.0
texture = ExtResource("4_isvs1")

[node name="Label" type="Label" parent="Character/HUD/Sticky Note"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 15.0
offset_top = 24.0
offset_right = 55.0
offset_bottom = 47.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "1234"

[node name="Keypad" type="TextureRect" parent="Character/HUD" index="6"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -30.0
offset_right = 34.0
offset_bottom = 64.0
texture = ExtResource("4_1slqb")
script = ExtResource("5_ws2qu")

[node name="Button" type="Button" parent="Character/HUD/Keypad"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 4.0
offset_top = 20.0
offset_right = 16.0
offset_bottom = 32.0

[node name="Button2" type="Button" parent="Character/HUD/Keypad"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 32.0
offset_bottom = 32.0

[node name="Button3" type="Button" parent="Character/HUD/Keypad"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 36.0
offset_top = 20.0
offset_right = 48.0
offset_bottom = 32.0

[node name="Button4" type="Button" parent="Character/HUD/Keypad"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 4.0
offset_top = 36.0
offset_right = 16.0
offset_bottom = 48.0

[node name="Button5" type="Button" parent="Character/HUD/Keypad"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 20.0
offset_top = 36.0
offset_right = 32.0
offset_bottom = 48.0

[node name="Button6" type="Button" parent="Character/HUD/Keypad"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 36.0
offset_top = 36.0
offset_right = 48.0
offset_bottom = 48.0

[node name="Button7" type="Button" parent="Character/HUD/Keypad"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 4.0
offset_top = 52.0
offset_right = 16.0
offset_bottom = 64.0

[node name="Button8" type="Button" parent="Character/HUD/Keypad"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 20.0
offset_top = 52.0
offset_right = 32.0
offset_bottom = 64.0

[node name="Button9" type="Button" parent="Character/HUD/Keypad"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 36.0
offset_top = 52.0
offset_right = 48.0
offset_bottom = 64.0

[node name="Button10" type="Button" parent="Character/HUD/Keypad"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 52.0
offset_top = 36.0
offset_right = 64.0
offset_bottom = 48.0

[node name="Button11" type="Button" parent="Character/HUD/Keypad"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 52.0
offset_top = 52.0
offset_right = 64.0
offset_bottom = 64.0

[node name="Label" type="Label" parent="Character/HUD/Keypad"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 2.0
offset_right = 20.0
offset_bottom = 14.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 8
text = "1234"
horizontal_alignment = 1

[node name="Toilet" parent="." instance=ExtResource("2_2i6gv")]
position = Vector2(-85, 0)
scale = Vector2(12, 12)

[node name="Note" parent="." node_paths=PackedStringArray("canvas") instance=ExtResource("3_m5xf5")]
canvas = NodePath("../Character/HUD")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Note"]
position = Vector2(281, 61)
shape = SubResource("RectangleShape2D_focxc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Note"]
libraries = {
"": SubResource("AnimationLibrary_223dm")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Note"]
stream = ExtResource("6_gmdbi")

[node name="Keypad" parent="." node_paths=PackedStringArray("canvas", "tRect") instance=ExtResource("3_m5xf5")]
canvas = NodePath("../Character/HUD")
tRect = NodePath("../Character/HUD/Keypad")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Keypad"]
position = Vector2(283, 108)
shape = SubResource("RectangleShape2D_6h0a0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Keypad"]
libraries = {
"": SubResource("AnimationLibrary_rcmpo")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Keypad"]

[node name="TileMap" type="TileMap" parent="."]
format = 2

[connection signal="pressed" from="Character/HUD/Keypad/Button" to="Character/HUD/Keypad" method="_on_button_pressed"]
[connection signal="pressed" from="Character/HUD/Keypad/Button2" to="Character/HUD/Keypad" method="_on_button_2_pressed"]
[connection signal="pressed" from="Character/HUD/Keypad/Button3" to="Character/HUD/Keypad" method="_on_button_3_pressed"]
[connection signal="pressed" from="Character/HUD/Keypad/Button4" to="Character/HUD/Keypad" method="_on_button_4_pressed"]
[connection signal="pressed" from="Character/HUD/Keypad/Button5" to="Character/HUD/Keypad" method="_on_button_5_pressed"]
[connection signal="pressed" from="Character/HUD/Keypad/Button6" to="Character/HUD/Keypad" method="_on_button_6_pressed"]
[connection signal="pressed" from="Character/HUD/Keypad/Button7" to="Character/HUD/Keypad" method="_on_button_7_pressed"]
[connection signal="pressed" from="Character/HUD/Keypad/Button8" to="Character/HUD/Keypad" method="_on_button_8_pressed"]
[connection signal="pressed" from="Character/HUD/Keypad/Button9" to="Character/HUD/Keypad" method="_on_button_9_pressed"]
[connection signal="pressed" from="Character/HUD/Keypad/Button10" to="Character/HUD/Keypad" method="_on_button_10_pressed"]
[connection signal="pressed" from="Character/HUD/Keypad/Button11" to="Character/HUD/Keypad" method="_on_button_11_pressed"]

[editable path="Character"]
